feature: appointment page
